# persian-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  verify_ui.py
chat/: admin.py  models.py  services.py  urls.py  views.py
chat/management/commands/: populate_knowledge_docs.py
chat/migrations/: 0001_initial.py
core/: settings.py  urls.py
templates/: base.html
templates/chat/: chat.html  index.html  session.html
