[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soapify"
version = "0.1.0"
description = "Soapify Persian-language assistant built with Django"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Soapify Team"}]
dependencies = [
    "Django>=5.2,<6.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]
